--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -13,12 +13,12 @@
 </head>
 <body>
 
-<ul>
-    <li><a href="http://localhost:8080/">Home</a></li>
-    <li><a href="http://localhost:8080/signup">Sign Up </a></li>
-    <li><a href="http://localhost:8080/profile">Profile </a></li>
-    <li><a href="about.asp">About</a></li>
-</ul>
-<h1> Hello Home page </h1>
+<!--<ul>-->
+<!--    <li><a href="http://localhost:8080/">Home</a></li>-->
+<!--    <li><a href="http://localhost:8080/signup">Sign Up </a></li>-->
+<!--    <li><a href="http://localhost:8080/profile">Profile </a></li>-->
+<!--    <li><a href="about.asp">About</a></li>-->
+<!--</ul>-->
+<div th:replace="fragment/header :: header">...</div>
 </body>
 </html>
