--- a/src/main/resources/static/homeStyle.css
+++ b/src/main/resources/static/homeStyle.css
@@ -1,13 +1,17 @@
-body{
-    background-image: url("https://images.unsplash.com/photo-1617395440873-63f6e7f25139?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=889&q=80");
+html{
+    background-image: url("https://images.squarespace-cdn.com/content/v1/5ea906bfb2891a7f00d30604/1595210701771-ZAQP2E8C0CXVNCN7UP4W/BACK.png?format=2500w");
     background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+
 }
+
 h1 {
     text-align: center;
     font-family: 'Parisienne', cursive;
     padding: 15px;
     /*background-color: ;*/
-}
+color: black}
 ul {
     list-style-type: none;
     margin: 0;
