--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,6 +11,8 @@
 
 </head>
 <body>
+<div th:replace="fragment/header :: header">...</div>
+
 <form th:action="@{/login}" method="post">
     <div class="imgcontainer">
         <img src="https://img.favpng.com/22/25/14/user-profile-computer-icons-login-clip-art-png-favpng-17raMaNK8TDg96GJM0eFABEsz.jpg" alt="Avatar" class="avatar">
@@ -18,19 +20,19 @@
 
     <div class="container">
         <label ><b>Username</b></label>
-        <input type="text" placeholder="Enter Username" name="uname" required>
+        <input type="text" placeholder="Enter Username" name="username" required>
 
         <label ><b>Password</b></label>
-        <input type="password" placeholder="Enter Password" name="psw" required>
+        <input type="password" placeholder="Enter Password" name="password" required>
 
         <button type="submit">Login</button>
-        <label>
+        <label style="font-size: 10px">
             <input type="checkbox" checked="checked" name="remember"> Remember me
         </label>
     </div>
 <a href="/signup"></a>
     <div class="container" >
-        <button type="button" class="cancelbtn">Cancel</button>
+       <a href="/">  <button type="button" class="cancelbtn">Cancel</button></a>
         <span class="psw">Sing up  <a href="http://localhost:8080/signup"> create new account</a></span>
     </div>
 </form>
