--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -6,14 +6,16 @@
     <link rel="stylesheet" th:href="@{/signupStyle.css}">
 </head>
 <body>
+<div th:replace="fragment/header :: header">...</div>
+
 <form method="POST" action="/usercreate" style="border:1px solid #ccc">
     <div class="container">
         <h1>Sign Up</h1>
         <p>Please fill in this form to create an account.</p>
         <hr>
 
-        <label ><b>Email</b></label>
-        <input type="text" placeholder="Enter Email" name="email" required>
+        <label ><b>User Name</b></label>
+        <input type="text" placeholder="Enter UserName" name="username" required>
 
         <label ><b>Password</b></label>
         <input type="password" placeholder="Enter Password" name="password" required>
