--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -2,7 +2,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
-  <link rel="stylesheet" th:href="@{./homeStyle.css}">
+  <link rel="stylesheet" th:href="@{./headerStyle.css}">
 
   <nav>
     <span th:unless="${principal == null}">
