--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" th:href="@{/homeStyle.css}">
 </head>
 <body>
-
+<h1 th:unless="${principal == null}"> </h1>
 <!--<ul>-->
 <!--    <li><a href="http://localhost:8080/">Home</a></li>-->
 <!--    <li><a href="http://localhost:8080/signup">Sign Up </a></li>-->
