--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title> Sign Up </title>
@@ -27,7 +27,7 @@
         <input type="text" placeholder="Enter you last name" name="lastname" required>
 
         <label ><b>dateOfBirth</b></label>
-        <input type="date" placeholder="Enter you birth date" name="dateOfBirth" required>
+        <input type="date" placeholder="Enter you birth date" name="dateOfBirth"  required>
 <br>
         <label ><b>bio</b></label>
         <input type="text" placeholder="Enter you Bio" name="bio" required>
