--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -9,7 +9,7 @@
       <ul>
         <li><a href="http://localhost:8080/">Home</a></li>
       <li><a href="http://localhost:8080/profile">Profile </a></li>
-      <li><a href="http://localhost:8080/profile">Posts </a></li>
+      <li><a href="http://localhost:8080/gpost">Posts </a></li>
       <li> <a href="/logout">Log out</a> </li>
       </ul>
         </span>
